# ddfg

./: CMakeLists.txt  config.yaml  web_capture.cpp
config/: ConfigParser.cpp  ConfigParser.h  config.json
face/: FaceRecognizer.cpp  FaceRecognizer.h
include/: ConfigParser.h  FaceRecognition.h  FaceRecognition.hpp  PerformanceMonitor.h  PerformanceTimer.h
myapp/: basic_capture.cpp  basic_face_detect.cpp  build_face_lib.cpp  capture_detect.cpp  face_cmp.cpp  face_recognition.cpp  image_to_vector.cpp  web_capture.cpp  web_capture1.cpp
myapp/include/: resnet.h
src/: ConfigParser.cpp  FaceRecognition.cpp  PerformanceMonitor.cpp  PerformanceTimer.cpp
test/: test_config.cpp  test_face_rec.cpp
tests/: test_config.cpp  test_face_recognition.cpp  test_performance_timer.cpp
timer/: PerformanceTimer.cpp  PerformanceTimer.h
